best_try_and_best_chance

--- a/html/dotnet/5-aspnet.html
+++ b/html/dotnet/5-aspnet.html
@@ -252,6 +252,9 @@ Global.asax:
       <span style="color: #5317ac;">public</span> string MyCalender<span style="color: #000000;">()</span> <span style="color: #000000;">{</span> <span style="color: #5317ac;">return</span> <span style="color: #2544bb;">"&lt;div&gt;&#25105;&#26159;&#19968;&#20010;&#24040;&#22797;&#26434;&#30340;&#26085;&#21382;&lt;/div&gt;"</span>; <span style="color: #000000;">}</span>
       <span style="color: #5317ac;">protected</span> <span style="color: #5317ac;">void</span> <span style="color: #00538b;">Button1_Click</span><span style="color: #000000;">(</span>object sender, EventArgs e<span style="color: #000000;">)</span> <span style="color: #000000;">{</span> <span style="color: #000000;">}</span>
   <span style="color: #000000;">&lt;</span>/script<span style="color: #000000;">&gt;</span>
+
+  <span style="color: #000000;">&lt;</span>%= MyCalender<span style="color: #a8007f;">()</span> %<span style="color: #000000;">&gt;</span>
+  <span style="color: #000000;">&lt;</span><span style="color: #8f0075;">asp</span>:<span style="color: #721045;">Calendar</span> <span style="color: #00538b;">ID</span>=<span style="color: #2544bb;">"Calendar1"</span> <span style="color: #00538b;">runat</span>=<span style="color: #2544bb;">"server"</span><span style="color: #000000;">&gt;&lt;</span>/<span style="color: #8f0075;">asp</span>:<span style="color: #721045;">Calendar</span><span style="color: #000000;">&gt;</span>
 <span style="color: #000000;">&lt;</span>/<span style="color: #721045;">html</span><span style="color: #000000;">&gt;</span>
 </pre>
 </div>
