--- a/html/miscellaneous/english.html
+++ b/html/miscellaneous/english.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-09-26 -->
+<!-- 2022-09-27 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>English</title>
@@ -45,6 +45,7 @@
 <li>prevent: 阻止</li>
 <li>Cookie: 饼干</li>
 <li>Session: 会话</li>
+<li>master/slaver: 主人/奴隶</li>
 </ul>
 </div>
 </section>
@@ -65,7 +66,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2022-09-26</p>
+<p class="date">Created: 2022-09-27</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
