best_try_and_best_chance

--- a/html/dotnet/5-aspnet.html
+++ b/html/dotnet/5-aspnet.html
@@ -308,7 +308,7 @@ Global.asax:
 </p>
 
 <p>
-方法很简单，首先，要创建一个模板文件。它跟 aspx 很像，只是文件的后缀和页面指令不同。比如，创建一个 yyy.Master 母版:
+方法很简单，首先，要创建一个母版文件。它跟 aspx 很像，只是文件的后缀和页面指令不同。比如，创建一个 yyy.Master 母版:
 </p>
 <div class="org-src-container">
 <pre class="src src-html"><span style="color: #000000;">&lt;</span>%@ Master <span style="color: #00538b;">Language</span>=<span style="color: #2544bb;">"C#"</span> %<span style="color: #000000;">&gt;</span>
