best_try_and_best_chance

--- a/html/dotnet/5-aspnet.html
+++ b/html/dotnet/5-aspnet.html
@@ -28,7 +28,7 @@
 <li><a href="#orgc345950">4. ASP.NET Webform</a>
 <ul>
 <li><a href="#org2585d5b">4.1. aspx 文件</a></li>
-<li><a href="#org78f20fd">4.2. 基本流程</a></li>
+<li><a href="#org3adc12e">4.2. Page 类</a></li>
 </ul>
 </li>
 <li><a href="#org1a00f89">5. ASP.NET MVC</a></li>
@@ -363,8 +363,8 @@ Global.asax:
 </div>
 </div>
 
-<div id="outline-container-org78f20fd" class="outline-3">
-<h3 id="org78f20fd"><span class="section-number-3">4.2.</span> 基本流程</h3>
+<div id="outline-container-org3adc12e" class="outline-3">
+<h3 id="org3adc12e"><span class="section-number-3">4.2.</span> Page 类</h3>
 <div class="outline-text-3" id="text-4-2">
 <p>
 你 (Browser) 请求 <a href="http://localhost:893232/Hello.aspx">http://localhost:893232/Hello.aspx</a> 到我 (IIS):
