--- a/html/dotnet/5-aspnet.html
+++ b/html/dotnet/5-aspnet.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-09-27 -->
+<!-- 2022-09-28 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>ASP.NET</title>
@@ -378,9 +378,15 @@ Global.asax:
 <li>在父类 Page 中，初始化了很多属性和方法，可以直接使用</li>
 <li>因此，掌握 Page 类的<b>生命周期</b>和 Page 的基本方法属性非常重要</li>
 </ul>
+
+<p>
+Page 类事件：
+<img src="img/oimg_20220928_005325.png" alt="oimg_20220928_005325.png">
+</p>
 </div>
 </div>
 </section>
+
 
 <section id="outline-container-org1a00f89" class="outline-2">
 <h2 id="org1a00f89"><span class="section-number-2">5.</span> ASP.NET MVC</h2>
@@ -398,7 +404,7 @@ MVC:
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2022-09-27</p>
+<p class="date">Created: 2022-09-28</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
