best_try_and_best_chance

--- a/html/dotnet/5-aspnet.html
+++ b/html/dotnet/5-aspnet.html
@@ -386,7 +386,7 @@ Global.asax:
 <h3 id="org7b56e37"><span class="section-number-3">4.3.</span> Page 生命周期</h3>
 <div class="outline-text-3" id="text-4-3">
 
-<figure id="org54e093c">
+<figure id="org74b203b">
 <img src="img/oimg_20220928_005325.png" alt="oimg_20220928_005325.png">
 
 </figure>
@@ -529,7 +529,7 @@ Unload:
 <span style="color: #000000;">{</span>
     <span style="color: #505050;">// </span><span style="color: #505050;">1. &#36825;&#20010;&#26041;&#27861;&#29992;&#26469;&#36827;&#34892;&#28165;&#29702;&#24037;&#20316;</span>
     <span style="color: #505050;">// </span><span style="color: #505050;">2. &#22312;&#36825;&#20010;&#38454;&#27573;&#65292;&#25152;&#26377;&#24037;&#20316;&#37117;&#24050;&#32463;&#23436;&#25104;&#65292;&#21487;&#20197;&#25918;&#24515;&#37322;&#25918;&#20219;&#20309;&#36164;&#28304;&#65292;&#21253;&#25324; Page &#23545;&#35937;</span>
-    <span style="color: #505050;">// </span><span style="color: #505050;">3. &#22312;&#36825;&#37324;&#65292;&#19981;&#33021;&#20351;&#29992; ~Response.Write~ &#36827;&#34892;&#36755;&#20986;&#65292;&#21542;&#21017;&#20250;&#25253;&#38169;</span>
+    <span style="color: #505050;">// </span><span style="color: #505050;">3. &#22312;&#36825;&#37324;&#65292;&#19981;&#33021;&#20351;&#29992; Response.Write &#36755;&#20986;&#20869;&#23481;&#65292;&#21542;&#21017;&#20250;&#25253;&#38169;</span>
 <span style="color: #000000;">}</span>
 </pre>
 </div>
