best_try_and_best_chance

--- a/html/dotnet/5-aspnet.html
+++ b/html/dotnet/5-aspnet.html
@@ -386,7 +386,7 @@ Global.asax:
 <h3 id="org7b56e37"><span class="section-number-3">4.3.</span> Page 生命周期</h3>
 <div class="outline-text-3" id="text-4-3">
 
-<figure id="org74b203b">
+<figure id="org70cbc69">
 <img src="img/oimg_20220928_005325.png" alt="oimg_20220928_005325.png">
 
 </figure>
@@ -426,7 +426,8 @@ InitComplete:
 <div class="org-src-container">
 <pre class="src src-csharp"><span style="color: #5317ac;">protected</span> <span style="color: #005a5f;">void</span> <span style="color: #721045;">Page_InitComplete</span><span style="color: #000000;">(</span><span style="color: #005a5f;">object</span> <span style="color: #00538b;">sender</span>, <span style="color: #005a5f;">EventArgs</span> <span style="color: #00538b;">e</span><span style="color: #000000;">)</span>
 <span style="color: #000000;">{</span>
-    <span style="color: #505050;">// </span><span style="color: #505050;">1. &#22312;&#36825;&#20010;&#38454;&#27573;&#65292;viewstate &#20540;&#36824;&#27809;&#26377;&#34987;&#21152;&#36733;&#65292;&#22240;&#27492;&#24744;&#21487;&#20197;&#20351;&#29992;&#27492;&#20107;&#20214;&#23545;&#35270;&#22270;&#29366;&#24577;&#36827;&#34892;&#26356;&#25913;&#65292;&#20197;&#30830;&#20445;&#22312;&#19979;&#19968;&#27425; postback &#21518;&#20445;&#30041;&#36825;&#20123;&#26356;&#25913;</span>
+    <span style="color: #505050;">// </span><span style="color: #505050;">1. &#22312;&#36825;&#20010;&#38454;&#27573;&#65292;viewstate &#20540;&#36824;&#27809;&#26377;&#34987;&#21152;&#36733;&#12290;</span>
+    <span style="color: #505050;">//    </span><span style="color: #505050;">&#22240;&#27492;&#24744;&#21487;&#20197;&#20351;&#29992;&#27492;&#20107;&#20214;&#23545;&#35270;&#22270;&#29366;&#24577;&#36827;&#34892;&#26356;&#25913;&#65292;&#20197;&#30830;&#20445;&#22312;&#19979;&#19968;&#27425; postback &#21518;&#20445;&#30041;&#36825;&#20123;&#26356;&#25913;</span>
     <span style="color: #505050;">// </span><span style="color: #505050;">2. &#36825;&#20010;&#20107;&#20214;&#26159;&#34987; Page &#23545;&#35937;&#35302;&#21457;&#30340;</span>
     <span style="color: #505050;">// </span><span style="color: #505050;">3. &#22914;&#26524;&#38656;&#35201;&#25152;&#26377;&#21021;&#22987;&#21270;&#24037;&#20316;&#23436;&#25104;&#25165;&#33021;&#25191;&#34892;&#30340;&#20219;&#21153;&#65292;&#21487;&#20197;&#20889;&#22312;&#36825;&#37324;</span>
 <span style="color: #000000;">}</span>
