--- a/html/dotnet/5-aspnet.html
+++ b/html/dotnet/5-aspnet.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-09-28 -->
+<!-- 2022-09-29 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>ASP.NET</title>
@@ -30,6 +30,11 @@
 <li><a href="#org2585d5b">4.1. aspx 文件</a></li>
 <li><a href="#org3adc12e">4.2. Page 类</a></li>
 <li><a href="#org7b56e37">4.3. Page 生命周期</a></li>
+<li><a href="#org0651d6c">4.4. 数据控件</a>
+<ul>
+<li><a href="#org2c68f19">4.4.1. GridView</a></li>
+</ul>
+</li>
 </ul>
 </li>
 <li><a href="#org1a00f89">5. ASP.NET MVC</a></li>
@@ -386,7 +391,7 @@ Global.asax:
 <h3 id="org7b56e37"><span class="section-number-3">4.3.</span> Page 生命周期</h3>
 <div class="outline-text-3" id="text-4-3">
 
-<figure id="org70cbc69">
+<figure id="org126afb7">
 <img src="img/oimg_20220928_005325.png" alt="oimg_20220928_005325.png">
 
 </figure>
@@ -540,6 +545,77 @@ Unload:
 </p>
 </div>
 </div>
+
+<div id="outline-container-org0651d6c" class="outline-3">
+<h3 id="org0651d6c"><span class="section-number-3">4.4.</span> 数据控件</h3>
+<div class="outline-text-3" id="text-4-4">
+</div>
+<div id="outline-container-org2c68f19" class="outline-4">
+<h4 id="org2c68f19"><span class="section-number-4">4.4.1.</span> GridView</h4>
+<div class="outline-text-4" id="text-4-4-1">
+<p>
+<a href="https://learn.microsoft.com/zh-cn/dotnet/api/system.web.ui.webcontrols.gridview?view=netframework-4.8">https://learn.microsoft.com/zh-cn/dotnet/api/system.web.ui.webcontrols.gridview?view=netframework-4.8</a>
+</p>
+
+<p>
+最简方式:
+</p>
+<div class="org-src-container">
+<pre class="src src-html"><span style="color: #000000;">&lt;</span><span style="color: #8f0075;">asp</span>:<span style="color: #721045;">SqlDataSource</span> <span style="color: #00538b;">ID</span>=<span style="color: #2544bb;">"DS1"</span> <span style="color: #00538b;">runat</span>=<span style="color: #2544bb;">"server"</span>
+                   <span style="color: #00538b;">SelectCommand</span>=<span style="color: #2544bb;">"select * from students"</span>
+                   <span style="color: #00538b;">ConnectionString</span>=<span style="color: #2544bb;">"&lt;%$ ConnectionStrings: mydb %&gt;"</span> /<span style="color: #000000;">&gt;</span>
+<span style="color: #000000;">&lt;</span><span style="color: #8f0075;">asp</span>:<span style="color: #721045;">GridView</span> <span style="color: #00538b;">DataSourceID</span>=<span style="color: #2544bb;">"DS1"</span> <span style="color: #00538b;">runat</span>=<span style="color: #2544bb;">"server"</span> /<span style="color: #000000;">&gt;</span>
+</pre>
+</div>
+
+<p>
+编程方式的数据源:
+</p>
+<div class="org-src-container">
+<pre class="src src-csharp">studentsGV.DataSource =
+    DbHelper.<span style="color: #721045;">DoExecuteQuery</span><span style="color: #000000;">(</span><span style="color: #2544bb;">"select * from students"</span><span style="color: #000000;">)</span>;
+studentsGV.<span style="color: #721045;">DataBind</span><span style="color: #000000;">()</span>;
+</pre>
+</div>
+<div class="org-src-container">
+<pre class="src src-html"><span style="color: #000000;">&lt;</span><span style="color: #8f0075;">asp</span>:<span style="color: #721045;">GridView</span> <span style="color: #00538b;">ID</span>=<span style="color: #2544bb;">"studentsGV"</span> <span style="color: #00538b;">runat</span>=<span style="color: #2544bb;">"server"</span> /<span style="color: #000000;">&gt;</span>
+</pre>
+</div>
+
+<p>
+灵活定义视图格式:
+</p>
+<div class="org-src-container">
+<pre class="src src-html"><span style="color: #000000;">&lt;</span><span style="color: #8f0075;">asp</span>:<span style="color: #721045;">GridView</span> <span style="color: #00538b;">ID</span>=<span style="color: #2544bb;">"studentsGV"</span> <span style="color: #00538b;">runat</span>=<span style="color: #2544bb;">"server"</span>
+    <span style="color: #00538b;">ShowFooter</span>=<span style="color: #2544bb;">"true"</span>
+    <span style="color: #00538b;">AutoGenerateColumns</span>=<span style="color: #2544bb;">"false"</span>
+    <span style="color: #00538b;">AllowSorting</span>=<span style="color: #2544bb;">"true"</span>
+    <span style="color: #00538b;">EmptyDataText</span>=<span style="color: #2544bb;">"&#27809;&#26377;&#26597;&#35810;&#21040;&#20219;&#20309;&#23398;&#29983;"</span><span style="color: #000000;">&gt;</span>
+    <span style="color: #000000;">&lt;</span><span style="color: #721045;">Columns</span><span style="color: #000000;">&gt;</span>
+        <span style="color: #000000;">&lt;</span><span style="color: #8f0075;">asp</span>:<span style="color: #721045;">BoundField</span> <span style="color: #00538b;">DataField</span>=<span style="color: #2544bb;">"name"</span> <span style="color: #00538b;">HeaderText</span>=<span style="color: #2544bb;">"&#22995;&#21517;"</span> <span style="color: #00538b;">SortExpression</span>=<span style="color: #2544bb;">"id"</span>/<span style="color: #000000;">&gt;</span>
+        <span style="color: #000000;">&lt;</span><span style="color: #8f0075;">asp</span>:<span style="color: #721045;">BoundField</span> <span style="color: #00538b;">DataField</span>=<span style="color: #2544bb;">"homecity"</span> /<span style="color: #000000;">&gt;</span>
+        <span style="color: #000000;">&lt;</span><span style="color: #8f0075;">asp</span>:<span style="color: #721045;">ButtonField</span> <span style="color: #00538b;">ButtonType</span>=<span style="color: #2544bb;">"Link"</span> <span style="color: #00538b;">Text</span>=<span style="color: #2544bb;">"dksk"</span> /<span style="color: #000000;">&gt;</span>
+        <span style="color: #000000;">&lt;</span><span style="color: #8f0075;">asp</span>:<span style="color: #721045;">CommandField</span> <span style="color: #00538b;">ShowDeleteButton</span>=<span style="color: #2544bb;">"true"</span> <span style="color: #00538b;">ShowEditButton</span>=<span style="color: #2544bb;">"true"</span> /<span style="color: #000000;">&gt;</span>
+        <span style="color: #000000;">&lt;</span><span style="color: #8f0075;">asp</span>:<span style="color: #721045;">TemplateField</span><span style="color: #000000;">&gt;</span>
+            <span style="color: #000000;">&lt;</span><span style="color: #721045;">ItemTemplate</span><span style="color: #000000;">&gt;</span>
+                <span style="color: #000000;">&lt;</span><span style="color: #721045;">div</span><span style="color: #000000;">&gt;</span>
+                    <span style="color: #000000;">&lt;</span><span style="color: #721045;">p</span><span style="color: #000000;">&gt;&lt;</span>%# Eval<span style="color: #a8007f;">(</span><span style="color: #2544bb;">"name"</span><span style="color: #a8007f;">)</span> %<span style="color: #000000;">&gt;</span> <span style="color: #000000;">(</span><span style="color: #a8007f;">&lt;</span>%# Eval<span style="color: #005f88;">(</span><span style="color: #2544bb;">"homecity"</span><span style="color: #005f88;">)</span> %<span style="color: #a8007f;">&gt;</span><span style="color: #000000;">)&lt;</span>/<span style="color: #721045;">p</span><span style="color: #000000;">&gt;</span>
+                    <span style="color: #000000;">&lt;</span><span style="color: #721045;">h3</span> <span style="color: #00538b;">style</span>=<span style="color: #2544bb;">"color: red"</span><span style="color: #000000;">&gt;</span><span style="font-style: italic; text-decoration: underline;">&#25105;&#26159;&#35841;</span><span style="color: #000000;">&lt;</span>/<span style="color: #721045;">h3</span><span style="color: #000000;">&gt;</span>
+                    <span style="color: #000000;">&lt;</span><span style="color: #721045;">h5</span> <span style="color: #00538b;">style</span>=<span style="color: #2544bb;">"color: green"</span><span style="color: #000000;">&gt;</span><span style="text-decoration: underline;">&#25105;&#23601;&#26159;&#25105;&#65292;&#19981;&#19968;&#26679;&#30340;&#28895;&#28779;</span><span style="color: #000000;">&lt;</span>/<span style="color: #721045;">h5</span><span style="color: #000000;">&gt;</span>
+                    <span style="color: #000000;">&lt;</span><span style="color: #8f0075;">asp</span>:<span style="color: #721045;">Button</span> <span style="color: #00538b;">ID</span>=<span style="color: #2544bb;">"dddd"</span> <span style="color: #00538b;">runat</span>=<span style="color: #2544bb;">"server"</span> <span style="color: #00538b;">Text</span>=<span style="color: #2544bb;">"&#25105;&#26159;&#25353;&#38062;"</span> /<span style="color: #000000;">&gt;</span>
+                <span style="color: #000000;">&lt;</span>/<span style="color: #721045;">div</span><span style="color: #000000;">&gt;</span>
+            <span style="color: #000000;">&lt;</span>/<span style="color: #721045;">ItemTemplate</span><span style="color: #000000;">&gt;</span>
+            <span style="color: #000000;">&lt;</span><span style="color: #721045;">ItemStyle</span> <span style="color: #00538b;">BackColor</span>=<span style="color: #2544bb;">"Green"</span> /<span style="color: #000000;">&gt;</span>
+        <span style="color: #000000;">&lt;</span>/<span style="color: #8f0075;">asp</span>:<span style="color: #721045;">TemplateField</span><span style="color: #000000;">&gt;</span>
+    <span style="color: #000000;">&lt;</span>/<span style="color: #721045;">Columns</span><span style="color: #000000;">&gt;</span>
+    <span style="color: #000000;">&lt;</span><span style="color: #721045;">AlternatingRowStyle</span> <span style="color: #00538b;">BackColor</span>=<span style="color: #2544bb;">"LightBlue"</span> <span style="color: #00538b;">Font-Size</span>=<span style="color: #2544bb;">"XX-Large"</span>/<span style="color: #000000;">&gt;</span>
+    <span style="color: #000000;">&lt;</span><span style="color: #721045;">HeaderStyle</span> <span style="color: #00538b;">BackColor</span>=<span style="color: #2544bb;">"Gray"</span> /<span style="color: #000000;">&gt;</span>
+<span style="color: #000000;">&lt;</span>/<span style="color: #8f0075;">asp</span>:<span style="color: #721045;">GridView</span><span style="color: #000000;">&gt;</span>
+</pre>
+</div>
+</div>
+</div>
+</div>
 </section>
 
 <section id="outline-container-org1a00f89" class="outline-2">
@@ -558,7 +634,7 @@ MVC:
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2022-09-28</p>
+<p class="date">Created: 2022-09-29</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
