--- a/html/index.html
+++ b/html/index.html
@@ -41,16 +41,10 @@
 <section id="toc">
 
 <h3>当前任务 <span style="font-size: 14px">(<a href="111/tasks.html">全部任务</a>)</span></h3>
-<p>
-关于 HTTP 的无状态性:
-</p>
-<ul class="org-ul">
-<li>什么是【无状态】</li>
-<li>为什么要【无状态】 (无状态的优点)</li>
-<li>为什么我们需要【状态】 (无状态的缺点)</li>
-<li>怎么基于【无状态】，实现有状态的请求 (技术路线有哪些)</li>
-<li>请在 ASP.NET 程序中，使用代码实现基于 Cookie 的登录和鉴权</li>
-</ul>
+<ol class="org-ol">
+<li>使用 Webform 方式，将学生管理系统 (CRUD) 完整复刻出来</li>
+<li>将官网的 WingtipToys 项目认真按步骤敲一遍，做到理解+掌握</li>
+</ol>
 
 <div><br>
 <h3>笔记目录 <small>(<a href="https://github.com/freelazy/" target="_blank">Github</a>)</small></h3>
