--- a/html/111/tasks.html
+++ b/html/111/tasks.html
@@ -45,7 +45,7 @@
 <div class="outline-text-2" id="text-active">
 <ol class="org-ol">
 <li>使用 Webform 方式，将学生管理系统 (CRUD) 完整复刻出来</li>
-<li>将官网的 WingtipToys 项目认真按步骤敲一遍，做到理解+掌握</li>
+<li>将官网的 WingtipToys 项目认真按步骤敲一遍 (或多遍)，做到理解+掌握</li>
 </ol>
 </div>
 </section>
