--- a/html/index.html
+++ b/html/index.html
@@ -43,7 +43,7 @@
 <h3>当前任务 <span style="font-size: 14px">(<a href="111/tasks.html">全部任务</a>)</span></h3>
 <ol class="org-ol">
 <li>使用 Webform 方式，将学生管理系统 (CRUD) 完整复刻出来</li>
-<li>将官网的 WingtipToys 项目认真按步骤敲一遍，做到理解+掌握</li>
+<li>将官网的 WingtipToys 项目认真按步骤敲一遍 (或多遍)，做到理解+掌握</li>
 </ol>
 
 <div><br>
